<resources>
    <string name="app_name">My Booklist</string>
    <string name="action_settings">Settings</string>

    <string name="add_new_book">Add new book</string>
    <string name="owned_up_to">Owned up to</string>
    <string name="books_missing">Books missing</string>
    <string name="last_available">Last available</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="delete">delete</string>

</resources>